--- a/lab_9_template.Rmd
+++ b/lab_9_template.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Lab 9 - Multiple Linear Regression"
-author: "ENTER YOUR NAME HERE"
+author: "Lily Zhao"
 output:
   html_document: default
 ---
@@ -31,7 +31,8 @@ Use this template to follow along in Lab Week 9. Each code chunk you'll need is 
 
 # a. Load packages 'tidyverse' and 'stargazer':
 
-
+library(tidyverse)
+library(stargazer)
 
 ```
 
@@ -41,9 +42,12 @@ Use this template to follow along in Lab Week 9. Each code chunk you'll need is 
 
 # a. Read in data as 'homes':
 
-
+homes<- read_csv("slo_homes.csv")
 # b. Filter to only include cities "San Luis Obispo", "Santa Maria-Orcutt", "Atascadero", and "Arroyo Grande", and call this new subset 'homes_sub':
 
+class(homes$City)
+homes_sub <- homes %>% 
+  filter(City=="San Luis Obispo"| City=="Santa Maria-Orcutt"| City== "Atascadero" | City== "Arroyo Grande" )
 
 
 ```
